Revision history for Perl extension Net::SSH2.

0.64
        - t/Net-SSH2.t: add support for TEST_NET_SSH2_TRACE

0.63  2016-10-13
        - die_with_error errors pointed to that method instead of its
          caller.
        - Fix case in user message.
        - Silence warning in perl 5.10.

0.62  2016-06-07
        - Code handling the conversion of arguments accepting both
          integers and constant names was broken for undef.

0.61  2016-06-03
        - "auth" method was skipping agent authentication always (bug
          report and patch by NIkolay A. Fetisov).

0.60  2016-05-23
        - Fix connecting to a custom port (bug report by Jan Gehring).

0.59_23  2016-05-19
        - Fix handling of eof in Channel read2 method.
        - Several documentation corrections.
        - Add example/benchmark.pl to the distribution.

0.59_22  2016-05-18
        - Add support for some additional constants.
        - Make remote login name default to be the same as the local
          one.
        - Several documentation improvements.

0.59_21  2016-05-13
        - Conversion of stream_id arguments has been moved to a
          typemap.
        - Channel 'flush' was not handling 'all' properly.

0.59_20  2016-05-11
        - Method timeout is not available in old libssh2 versions.

0.59_19  2016-05-10
         - Honour timeout setting from _ask_user method.

0.59_18  2016-05-09
        - Fix failing test caused by a remote SIGPIPE (bug report by
          Ferenc Erki).
        - Work-around libssh2_channel_wait_closed bug.
        - Fix channel and file PRINTF methods.
        - Improve tests.

0.59_17  2016-05-06
        - Port Channel "readline" method to File class.
        - Implement File getc in XS for improved performance.
        - Add workaround for perl bug around EOF method of tied file
          handles.
        - Add more tests.
        - Several documentation improvements.

0.59_16  2016-05-04